--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,7 @@ color: #2E2F42;
 }
 .navigation-item.current{
 position: relative;
+color: #404bbf;
 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .adress{
@@ -120,11 +121,15 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 /*--------------HERO----------*/
 
 .hero{
+    max-width: 1440px;
     background: #2E2F42;
     padding: 188px 0;
     background-image: linear-gradient(
         to bottom, rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)),url(../images/hero-img.jpg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
 }
 .hero-title {
     color: #FFF;
@@ -155,10 +160,11 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
             min-width: 169px;
             height: 56px;
             border: none;
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-btn:hover,
 .hero-btn:focus{
-    background: #404BBF;
+    background-color: #404BBF;
 }
 
 /*--------------COMPONENTS----------*/
@@ -258,19 +264,27 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .team-description{
     padding: 32px 0;
 }
-.team-icon-bloc{
+.team-icon-list{
     display: flex;
-    background-color: #4D5AE5;
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
     justify-content: center;
-    align-items: center;
-}
-.team-bloc-for-icon{
-    display: flex;
     gap: 24px;
-    margin: 0 16px;
+}
+.team-icon-item{
+    width: 40px;
+    height: 40px;
+}
+.team-icon-link{
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.team-icon-link:hover,
+.team-icon-link:focus{
+    background-color: #404bbf;
 }
 .team-icon{
     fill: #F4F4FD;
@@ -324,6 +338,13 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .portfolio-points {
     background-color: #FFFFFF;
     width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-points:hover{
+box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+.portfolio-points:hover .portfolio-text{
+    transform: translateY(0%);
 }
 .portfolio-container-hover{
     position: absolute;
@@ -344,21 +365,6 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: relative;
     overflow: hidden;
 }
-.portfolio-points:hover .portfolio-container-hover{
-    transform: translateY(0);
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portfolio-points:hover{
-    cursor: pointer;
-}
-.portfolio-points:hover .portfolio-border{
-    border: 1px solid #F4F4FD;
-        background: #FFF;
-        box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    }
 /*--------------FOOTER----------*/
 
 .footer {background:#2E2F42;}
