--- a/css/styles.css
+++ b/css/styles.css
@@ -130,6 +130,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
+        margin: 0 auto;
 }
 .hero-title {
     color: #FFF;
